# OoTMMCombo-Tracker

./: .gitignore  CMakeLists.txt  Flags.h  Items.cpp  Items.csv  Items.h  Items.txt  MIT-LICENSE.txt.txt  NPC.h  Objects.cpp  Objects.h  OoTMM-Spoiler-OhY52a2T.txt  OoTMM-Spoiler-tracker.txt  OoTMMCombo-Tracker.cpp  OoTMMCombo-Tracker.rc  OoTMMCombo-Tracker.sln  OoTMMCombo-Tracker.vcxproj  OoTMMCombo-Tracker.vcxproj.filters  OoTMMComboTracker.qrc  OoTMMComboTracker.ui  OvTypes.cpp  Pool Transform.py  Position Finder.py  README.md  Scenes.cpp  Scenes.h  api.cpp  api.h  app.cpp  app.h  buffer.cpp  buffer.h  game.cpp  game.h  main.cpp  main.h  multi.h  pool_mm.csv  pool_mm.txt  pool_oot.csv  (+9 more)
AutoSave/: AutoSave-02_08_2025_13_36_57.trck  AutoSave-02_08_2025_14_04_51.trck  AutoSave-03_08_2025_18_52_37.trck  AutoSave-03_08_2025_19_04_13.trck  AutoSave-04_08_2025_09_33_18.trck  AutoSave-04_08_2025_10_53_45.trck  AutoSave-04_08_2025_11_05_21.trck  AutoSave-04_08_2025_11_05_21_fix.trck  AutoSave-04_08_2025_11_56_48.trck  AutoSave-04_08_2025_12_59_01.trck  AutoSave-04_08_2025_13_31_46.trck  AutoSave-08_12_2025_11_58_04.trck  AutoSave-08_12_2025_12_33_31.trck  AutoSave-08_12_2025_12_47_24.trck  AutoSave-08_12_2025_14_39_09.trck  AutoSave-11_07_2025_12_32_30.trck  AutoSave-16_07_2025_18_46_05.trck  AutoSave-17_07_2025_10_05_26.trck  AutoSave-17_07_2025_11_09_06.trck  AutoSave-17_07_2025_14_42_56.trck  AutoSave-17_07_2025_17_37_47.trck  AutoSave-17_07_2025_17_55_29.trck  AutoSave-17_07_2025_19_25_28.trck  AutoSave-17_07_2025_20_19_00.trck  AutoSave-19_07_2025_10_32_42.trck  (+15 more)
(+608 files in other folders)
